2004-10-05  Kjartan Maraas  <kmaraas@gnome.org>

	* config/locale.alias: Prefer nb_NO locale.

Fri Oct 01 12:07:18 2004  Ray Strode  <rstrode@redhat.com>

	* gui/greeter/greeter_action_language.c (selection_changed):
	Ensure that selection iterator is valid before using it.

Thu Sep 30 20:49:26 2004  George Lebl <jirka@5z.com>

	* daemon/slave.c: set GDM_XSERVER_LOCATION with the x server type

Thu Sep 30 10:50:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/verify-pam.c: Now declare GdmUserId and GdmGroupId as
	  extern to avoid warnigns.

Wed Sep 29 17:15:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/verify-pam.c: Cleaned up code and moved
	  final di_devperm_logout call in gdm.c so it properly resets
	  permissions to root when gdm-stop is run.

Tue Sep 22 12:45:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c, daemon/verify-pam.c: Modification to logindevperm
	  logic so that device permissions are given to the gdm user
	  while gdm is running.  This allows a11y programs like
	  gnopernicus to access the sound device for text-to-speech.
	  Minor correction to the logindevperm logout logic in 
	  verify-pam.c so that di_devperm_logout isn't called in
	  situations where di_devperm_login was not called.

Tue Sep 15 12:45:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Corrected check for Solaris auditing API so it
	  will not set HAVE_ADT when building on Solaris 9 and earlier.
	  The auditing API supported in gdm2 is only supported on the
	  next release of Solaris.

Tue Sep 14 15:29:22 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.5

2004-08-27  Akagic Amila  <bono@linux.org.ba>

        * configure.in: Added 'bs' to ALL_LINGUAS.

Thu Aug 26 15:55:00 2004  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Updated docs to include gdmflexiserver command
	  options, arguments for all GDM programs aside from gdm-binary
	  (which was already there), added accessibility section, and