@@ -1,3 +1,7 @@
+2004-10-14  Brian Cameron  <brian.cameron@sun.com>
+
+	* config/gdm.conf.in: Minor change to wording in comments.
+
 2004-10-05  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* config/locale.alias: Prefer nb_NO locale.
